# poolgen

./: .gitignore  CITATION.cff  Cargo.toml  Project.toml  README.md  gudmc_intermediate_file_Fst-fst-100_bp_windows.csv  gudmc_intermediate_file_Fst.tmp  gudmc_intermediate_file_tajimasD.tmp  test_iterative_ols_with_xxt_eigens-1685017239.498037-ols_iterative_xxt_0_eigens.csv
misc/: GP.r  PackageCompiler_bundler.md  bam_to_mpileup.sh  weedomics_quantpopgen.md
src/: GP.r  functions.jl  functions_filterTransform.jl  functions_gp.jl  functions_gwas.jl  functions_impute.jl  functions_io.jl  functions_linearModel.jl  functions_simulate.jl  main.rs  poolgen.jl  structs.jl  user_functions.jl
test/: 1_prepare_test_pileup.sh  2_simulate_missing_loci_in_pileup_file.sh  3_simulate_missing_loci_in_pileup_file-IMPROVEMENT.sh  Simulated-16663168544.csv  cleanup.jl  test-2022-12-22T09:30:05.130.syncx  test-FILTERED-missing_0.2-alpha1_0.01-maf_0.02-alpha2_0.55-cov_7-2022-12-22T08:29:43.154.syncx  test-FILTERED-missing_0.2-alpha1_0.01-maf_0.02-alpha2_0.55-cov_7-2022-12-22T08:53:38.487.syncx  test-FILTERED-missing_0.2-alpha1_0.01-maf_0.02-alpha2_0.55-cov_7-2022-12-22T09:30:13.621.pileup  test-GWAS-GBLUP-maf_0.001-2022-12-22T08:55:19.452.tsv  test-GWAS-OLS-maf_0.001-2022-12-22T08:55:07.530.tsv  test-GWAlpha-maf_0.001-2022-12-22T08:54:54.881.tsv  test-GWAlpha.tsv  test-SIMULATED-GENOTYPES.bim  test-SIMULATED-GENOTYPES.map  test-SIMULATED-PHENOTYPES.csv  test-SIMULATED-PHENOTYPES.fam  test-SIMULATED-PHENOTYPES.syncx  test.csv  test.jl  test.py  test.syncx  test.syncx-GWAS-01.tsv.tmp  (+38 more)
(+106 files in other folders)
