[package]
name = "poolgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.23", features=["derive"]}
nalgebra = "0.32.1"
statrs = "0.16.0"
argmin = {version="0.8.1", features=["rayon"]}
argmin-math = "0.3.0"
rand = "0.8.5"
function_name = "0.3.0"
