[package]
name = "poolgen"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version="3.2.23", features=["derive"]}
nalgebra = "0.32.1"
statrs = "0.16.0"
argmin = "0.8.1"
argmin-math = "0.3.0"
rand = "0.8.5"
function_name = "0.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
