[package]
name = "poolgen"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version="3.2.23", features=["derive"]}
ndarray = { version = "0.15.6", features = ["rayon"]}
# ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
statrs = "0.16.0"
argmin = "0.8.1"
argmin-math = "0.3.0"
rand = "0.8.5"
function_name = "0.3.0"
rayon = "1.7.0"
plotlib = "0.5.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
